--- a/weather-data/src/App.css
+++ b/weather-data/src/App.css
@@ -20,3 +20,31 @@
 .App-link {
   color: #09d3ac;
 }
+.location-weather{
+  width:40%;
+  border:1px solid black;
+  margin: 10px;
+  padding:10px;
+}
+.location-weather p {
+  font-size:1.2rem;
+}
+.weather-display{
+  display:flex;
+  justify-content: space-around;
+  flex-wrap:wrap;
+
+}
+.get-location{
+  width:100%;
+  font-size:1.5rem;
+  
+}
+.btn{
+  width:20%;
+  height:40px;
+  margin:20px 40%;
+  border-radius:5px;
+  background:white;
+  border:1px solid black;
+}
