--- a/weather-data/src/App.css
+++ b/weather-data/src/App.css
@@ -22,6 +22,7 @@
 }
 .location-weather{
   width:20%;
+  min-width:200px;
   border:1px solid black;
   margin: 10px;
   padding:10px;
@@ -42,6 +43,7 @@
 }
 .btn{
   width:10%;
+  min-width:100px;
   height:40px;
   margin:20px 40%;
   border-radius:5px;
