--- a/weather-data/src/App.css
+++ b/weather-data/src/App.css
@@ -53,3 +53,24 @@
 img{
   max-height:75px;
 }
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+ }
+ 
+ .spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 30%;
+  left: 48%;
+  width: 50px;
+  height: 50px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border-top: 2px solid #07d;
+  border-right: 2px solid transparent;
+  animation: spinner .6s linear infinite;
+ }
+ 
